Bug 1469746 - Rebuild display lists in full when we start/stop computing visibility for plugins. r=miko, a=RyanVM

MozReview-Commit-ID: 3xHoYBBA4Fy